test/files/neg/t3683a.check
t3683a.scala:14: error: match may not be exhaustive.
It would fail on the following input: XX()
    w match {
    ^
one error found
